--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build kuro-shiroko
         run: |
           # nix flake check --all-systems
-          nix build .#nixosConfigurations.demeter.config.system.build.toplevel
+          nix build .#nixosConfigurations.kuroko.config.system.build.toplevel
   build-aarch64-kanade:
     runs-on: ubuntu-24.04-arm
     permissions:
@@ -39,4 +39,4 @@ jobs:
       - name: Build kanade
         run: |
           # nix flake check --all-systems
-          nix build .#nixosConfigurations.callisto.config.system.build.toplevel
+          nix build .#nixosConfigurations.kanade.config.system.build.toplevel
